<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#AE7D36"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/elementNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_elemento"
        android:minHeight="48dp"
        android:autofillHints=""
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/availabilityRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/yesRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Si" />

        <RadioButton
            android:id="@+id/noRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No" />

    </RadioGroup>
</LinearLayout>
