<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7CC17A"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".TabaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/le_tue_macchinette"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7CC17A">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/back_to_previous_activity"
            android:src="@drawable/back"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/addMachine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="243dp"
            android:layout_toEndOf="@id/backButton"
            android:background="#00FFFFFF"
            android:contentDescription="@string/add_machine"
            android:src="@drawable/add"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <ListView
        android:id="@+id/machineListView"
        android:layout_width="match_parent"
        android:layout_height="357dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#7CC17A"
        android:scrollbars="vertical"/>

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F13B3B"
        android:minHeight="48dp"
        android:text="@string/logout"
        android:textColor="#11227E" />
</LinearLayout>
