<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9E1FA"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/Theme.Ssss"
    tools:visibility="visible">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="171dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/siga_siga"
        android:textColor="#2538A3"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#45AAED"
        android:text="@string/login_come_amministratore"
        android:textColor="#AAFFFFFF"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#40FF47"
        android:text="@string/login_come_cliente"
        android:textColor="#005497" />
</LinearLayout>
